exports[`Flash Snapshot Test > renders correcty #0`] = `
<div
  class="ui-flash-message ui-grid-px ui-flash-message-enter"
  data-id="ui-flash"
>
  <div
    class="bg-zingy-green p-32 flex align-center rounded shadow-container-subtle"
  >
    <svg
      class="text-cool-black mr-16 self-baseline"
      style="width: 1.5rem; height: 1.5rem;"
    >
      <use xlink:href="#sprite-icon-gui-tick"></use>
    </svg>
    <p class="ui-text-p1 mr-16 text-cool-black">
      Congratulations! You've won the Oscar
    </p>
    <button type="button" class="p-0 ml-auto self-start focus:outline-none">
      <svg
        class="text-cool-black transition-colors"
        style="width: 1.5rem; height: 1.5rem;"
      >
        <use xlink:href="#sprite-icon-gui-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flash Snapshot Test > renders correcty #1`] = `
<div
  class="ui-flash-message ui-grid-px ui-flash-message-enter"
  data-id="ui-flash"
>
  <div
    class="bg-electric-cyan p-32 flex align-center rounded shadow-container-subtle"
  >
    <svg
      class="text-cool-black mr-16 self-baseline"
      style="width: 1.5rem; height: 1.5rem;"
    >
      <use xlink:href="#sprite-icon-gui-ably-badge"></use>
    </svg>
    <p class="ui-text-p1 mr-16 text-cool-black">This is a notice</p>
    <button type="button" class="p-0 ml-auto self-start focus:outline-none">
      <svg
        class="text-cool-black transition-colors"
        style="width: 1.5rem; height: 1.5rem;"
      >
        <use xlink:href="#sprite-icon-gui-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flash Snapshot Test > renders correcty #2`] = `
<div
  class="ui-flash-message ui-grid-px ui-flash-message-enter"
  data-id="ui-flash"
>
  <div
    class="bg-gui-error p-32 flex align-center rounded shadow-container-subtle"
  >
    <svg
      class="text-white mr-16 self-baseline"
      style="width: 1.5rem; height: 1.5rem;"
    >
      <use xlink:href="#sprite-icon-gui-warning"></use>
    </svg>
    <p class="ui-text-p1 mr-16 text-white">This is an error, very bad</p>
    <button type="button" class="p-0 ml-auto self-start focus:outline-none">
      <svg
        class="text-white transition-colors"
        style="width: 1.5rem; height: 1.5rem;"
      >
        <use xlink:href="#sprite-icon-gui-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flash Snapshot Test > renders correcty #3`] = `
<div
  class="ui-flash-message ui-grid-px ui-flash-message-enter"
  data-id="ui-flash"
>
  <div
    class="bg-active-orange p-32 flex align-center rounded shadow-container-subtle"
  >
    <svg
      class="text-white mr-16 self-baseline"
      style="width: 1.5rem; height: 1.5rem;"
    >
      <use xlink:href="#sprite-icon-gui-warning"></use>
    </svg>
    <p class="ui-text-p1 mr-16 text-white">This is an alert</p>
    <button type="button" class="p-0 ml-auto self-start focus:outline-none">
      <svg
        class="text-white transition-colors"
        style="width: 1.5rem; height: 1.5rem;"
      >
        <use xlink:href="#sprite-icon-gui-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flash Snapshot Test > renders correcty #4`] = `
<div
  class="ui-flash-message ui-grid-px ui-flash-message-enter"
  data-id="ui-flash"
>
  <div
    class="bg-electric-cyan p-32 flex align-center rounded shadow-container-subtle"
  >
    <p class="ui-text-p1 mr-16 text-cool-black">
      Some useful information, you are welcome
    </p>
    <button type="button" class="p-0 ml-auto self-start focus:outline-none">
      <svg class=" transition-colors" style="width: 1.5rem; height: 1.5rem;">
        <use xlink:href="#sprite-icon-gui-close"></use>
      </svg>
    </button>
  </div>
</div>
`;
